<resources>
    <string name="app_name">HomeWork</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_bottom_use_third_account">使用第三方账号登陆</string>
    <string name="login_select_account_login">账号登录</string>
    <string name="login_titleBar_register">注册</string>
    <string name="register_tips">登录密码为6位以上数字和字母的组合</string>
    <string name="login_input_username_hint">请输入手机号/邮箱/用户名</string>
    <string name="login_input_phoneNumber_hint">请输入手机号</string>
    <string name="login_input_password_hint">请输入密码</string>
    <string name="login_input_check_code_hint">请输入验证码</string>
    <string name="login_input_btn_get_code">获取验证码</string>
    <string name="login_account_forget_password">忘记密码</string>
    <string name="re_password">重置密码</string>
    <string name="login_input_repassword_hint">请确认密码</string>
    <string name="reSend">重新发送</string>
    <string name="sms_code_send_success">验证码已成功发送至您的手机，请注意查收</string>
    <string name="phone_number_incorrect">手机号输入不正确</string>
    <string name="sms_code_send_failure">验证码发送失败</string>
    <string name="quick_login_input_incorrect">您的手机号或验证码输入有误</string>
    <string name="register_password_not_consistant">两次输入的密码不一致</string>
    <string name="register_success">注册成功</string>
    <string name="register_failure">注册失败</string>
    <string name="register_input_incorrect">您输入的信息不正确，请检查你的输入</string>
    <string name="login_success">登陆成功</string>
    <string name="login_failure">登陆失败</string>
    <string name="login_empty">用户名或密码为空</string>
</resources>
