<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_bar_color">
        <TextView
            style="@style/base_textView_style"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:id="@+id/title_text"
            android:text="@string/login"
            android:textSize="20dp"
            android:textColor="@color/title_text_color"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/app_white">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="16dp"
                    android:background="@null"
                    android:scrollHorizontally="true"
                    android:textColorHint="@color/gray"
                    android:textSize="14dp"
                    android:lines="1"
                    android:inputType="number"
                    android:maxLength="11"
                    android:hint="@string/login_input_username_hint"/>
                <ImageView
                    android:id="@+id/clear_username"
                    android:visibility="gone"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="center"
                    android:src="@drawable/delete_username"/>
            </RelativeLayout>
            <View
                android:layout_height="0.5dp"
                android:layout_width="match_parent"
                android:background="#50666666"/>
            <RelativeLayout
                android:id="@+id/getCode"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/login_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_centerVertical="true"
                    android:padding="16dp"
                    android:scrollHorizontally="true"
                    android:lines="1"
                    android:textColorHint="@color/gray"
                    android:textSize="14dp"
                    android:hint="@string/login_input_check_code_hint"
                    android:inputType="number"
                    android:maxLength="6"/>
                <Button
                    android:id="@+id/login_getCode"
                    android:layout_width="100dp"
                    android:layout_height="42dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="8dp"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/login_input_btn_get_code"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:background="@drawable/btn_get_code_selector" />
                <ImageView
                    android:id="@+id/login_clear_code"
                    android:layout_toLeftOf="@+id/register_getCode"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="center"
                    android:src="@drawable/delete_username"
                    android:visibility="gone"/>
            </RelativeLayout>
            <View
                android:layout_height="0.5dp"
                android:layout_width="match_parent"
                android:background="#50666666"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_centerVertical="true"
                    android:padding="16dp"
                    android:scrollHorizontally="true"
                    android:lines="1"
                    android:textColorHint="@color/gray"
                    android:textSize="14dp"
                    android:inputType="textPassword"
                    android:hint="@string/login_input_password_hint"/>
                <CheckBox
                    android:id="@+id/login_checkBox"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:button="@drawable/passwd_bg_selector"/>
                <ImageView
                    android:id="@+id/clear_password"
                    android:layout_toLeftOf="@+id/login_checkBox"
                    android:visibility="gone"
                    android:layout_width="40dp"
                    android:background="@null"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="center"
                    android:src="@drawable/delete_username"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/forget_password"
        style="@style/base_textView_style"
        android:layout_gravity="right"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:drawableRight="@drawable/yellow_arrow"
        android:drawablePadding="5dp"
        android:text="@string/login_account_forget_password"
        android:textColor="@color/orange"
        android:textSize="14dp"/>
    <Button
        android:id="@+id/login"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/register"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"/>
    <Button
        android:visibility="gone"
        android:id="@+id/reset_password"
        android:text="@string/re_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@drawable/white_border_area"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_bottom_use_third_account"
            android:textSize="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/login_qq"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ico_qq_accout"/>
            <ImageView
                android:id="@+id/login_wechat"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ico_qq_wixin"/>
            <ImageView
                android:id="@+id/login_weibo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ico_sina_weibo"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>