<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context="com.example.aqr.homework.view.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_bar_color">
        <ImageView
            android:id="@+id/register_back"
            style="@style/common_left_back_imageView_style"/>
        <TextView
            style="@style/base_textView_style"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/login_titleBar_register"
            android:textSize="20dp"
            android:textColor="@color/title_text_color"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/app_white"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/register_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="16dp"
                    android:background="@null"
                    android:scrollHorizontally="true"
                    android:textColorHint="@color/gray"
                    android:textSize="14dp"
                    android:lines="1"
                    android:inputType="number"
                    android:maxLength="11"
                    android:hint="@string/login_input_phoneNumber_hint"/>
                <ImageView
                    android:id="@+id/register_clear_phoneNumber"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="center"
                    android:src="@drawable/delete_username"
                    android:visibility="gone"/>
            </RelativeLayout>
            <View
                android:layout_height="0.5dp"
                android:layout_width="match_parent"
                android:background="#50666666"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/register_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_centerVertical="true"
                    android:padding="16dp"
                    android:scrollHorizontally="true"
                    android:lines="1"
                    android:textColorHint="@color/gray"
                    android:textSize="14dp"
                    android:hint="@string/login_input_check_code_hint"
                    android:inputType="number"
                    android:maxLength="6"/>
                <Button
                    android:id="@+id/register_getCode"
                    android:layout_width="100dp"
                    android:layout_height="42dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="8dp"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/login_input_btn_get_code"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:background="@drawable/btn_get_code_selector" />
                <ImageView
                    android:id="@+id/register_clear_code"
                    android:layout_toLeftOf="@+id/register_getCode"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="center"
                    android:src="@drawable/delete_username"
                    android:visibility="gone"/>
            </RelativeLayout>
            <View
                android:layout_height="0.5dp"
                android:layout_width="match_parent"
                android:background="#50666666"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_centerVertical="true"
                    android:padding="16dp"
                    android:scrollHorizontally="true"
                    android:lines="1"
                    android:textColorHint="@color/gray"
                    android:textSize="14dp"
                    android:inputType="textPassword"
                    android:hint="@string/login_input_password_hint"/>
                <CheckBox
                    android:id="@+id/register_password_checkBox"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:button="@drawable/passwd_bg_selector"/>
                <ImageView
                    android:id="@+id/register_clear_password"
                    android:layout_toLeftOf="@+id/register_password_checkBox"
                    android:visibility="gone"
                    android:layout_width="40dp"
                    android:background="@null"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="center"
                    android:src="@drawable/delete_username"/>
            </RelativeLayout>
            <View
                android:layout_height="0.5dp"
                android:layout_width="match_parent"
                android:background="#50666666"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/register_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_centerVertical="true"
                    android:padding="16dp"
                    android:scrollHorizontally="true"
                    android:lines="1"
                    android:textColorHint="@color/gray"
                    android:textSize="14dp"
                    android:inputType="textPassword"
                    android:hint="@string/login_input_repassword_hint"/>
                <ImageView
                    android:id="@+id/register_clear_repassword"
                    android:visibility="gone"
                    android:layout_width="40dp"
                    android:background="@null"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="center"
                    android:src="@drawable/delete_username"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:text="@string/register_tips"
        android:textColor="@color/blue"/>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_titleBar_register"/>

</LinearLayout>
